Remove paypal endpoints for interim release purposes
