# application/views.py
@@ -6,7 +6,6 @@ OFS-MORE-CCN3: Apply to be a Childminder Beta
 """
 import datetime
 import uuid
-import json
 import logging
 import requests
 import traceback
@@ -17,7 +16,7 @@ from django.http import JsonResponse
 from rest_framework import status
 from rest_framework.decorators import api_view
 
-from .serializers import CardPaymentRequestSerializer, PaypalPaymentRequestSerializer, ApiKeySerializer
+from .serializers import CardPaymentRequestSerializer, ApiKeySerializer
 from .utilities import Utilities
 from lxml import etree
 
@@ -105,7 +104,7 @@ def get_payment(request, payment_id):
 
     return JsonResponse(
         {
-            "orderCode": payment_id,
+            "customerOrderCode": payment_id,
             "paymentMethod": payment_service_result_reply.get('orderStatus').get('payment').get('paymentMethod'),
             "creationDate": payment_date_combined.isoformat(),
             "lastEvent": payment_service_result_reply.get('orderStatus').get('payment').get('lastEvent'),
@@ -240,109 +239,6 @@ def __build_worldpay_card_payment_xml(card_payment_request):
         xml_declaration=True,
         encoding='UTF-8',
         doctype='<!DOCTYPE paymentService PUBLIC "-//Worldpay//DTD Worldpay PaymentService v1//EN" "http://dtd.worldpay.com/paymentService_v1.dtd">'
-    )
-
-    return xml_string
-
-
-@api_view(['POST'])
-def make_paypal_payment(request):
-    """
-    Function for making a new Paypal payment via the WorldPay payment processing platform
-    :param request: a json object inclusive of details for a paypal payment to be taken
-    :return: a response inclusive of any URLs that a user should be redirected to (i.e. WorldPay paypal UIs) for making
-    a Paypal payment
-    """
-    mapped_json_request = Utilities.convert_json_to_python_object(request.data)
-
-    try:
-        serializer = PaypalPaymentRequestSerializer(data=mapped_json_request)
-        if serializer.is_valid():
-            return __create_worldpay_paypal_order_request(mapped_json_request)
-        err = __format_error(serializer.errors)
-        log.error("Django serialization error: " + err[0] + err[1])
-        return JsonResponse({"message": err[0] + err[1], "error": "Bad Request"}, status=status.HTTP_400_BAD_REQUEST)
-    except Exception as ex:
-        exception_data = traceback.format_exc().splitlines()
-        exception_array = [exception_data[-3:]]
-        log.error(exception_array)
-        return JsonResponse(ex.__dict__, status=500)
-
-
-def __create_worldpay_paypal_order_request(paypal_payment_request):
-    """
-    Helper method for creating a request object that can be consumed by the Worldpay XML API to take a paypal payment
-    :param paypal_payment_request: a request object sent to the payment gateway API containing information for taking a
-    Paypal payment via Worldpay
-    """
-    payload = __build_worldpay_paypal_payment_xml(paypal_payment_request)
-    headers = {"content-type": "text/xml"}
-    response = requests.post(WORLDPAY_PAYMENT_ENDPOINT, data=payload, headers=headers,
-                             auth=(WORLDPAY_XML_USERNAME, WORLDPAY_XML_PASSWORD))
-    dictionary = xmltodict.parse(response.text)
-
-    payment_service_result = dictionary.get('paymentService')
-    payment_service_result_reply = payment_service_result.get('reply')
-
-    if 'error' in payment_service_result_reply.get('orderStatus'):
-        return JsonResponse(
-            {
-                "message": 'Internal Server error',
-                "error": payment_service_result_reply.get('orderStatus').get('error').get('#text')
-            }, status=500
-        )
-    else:
-        return JsonResponse(
-            {
-                "amount": payment_service_result_reply.get('orderStatus').get('payment').get('amount').get('@value'),
-                "customerOrderCode": payment_service_result_reply.get('orderStatus').get('@orderCode'),
-                "paymentMethod": payment_service_result_reply.get('orderStatus').get('payment').get('paymentMethod'),
-                "currencyCode": payment_service_result_reply.get('orderStatus').get('payment').get('amount').get(
-                    '@currencyCode'),
-                "redirectUrl": payment_service_result_reply.get('orderStatus').get('payment').get('redirectUrl'),
-            }
-            , status=201)
-
-
-def __build_worldpay_paypal_payment_xml(paypal_payment_request):
-    """
-    Helper method for creating an XML request object for dispatch to the Worldpay API
-    :param paypal_payment_request: an inbound paypal payment request received by the payment gateway API
-    :return: a structured XML request to be POSTed to Worldpay
-    """
-    payment_service_root = etree.Element('paymentService', version='1.2', merchantCode=str(MERCHANT_CODE))
-    submit = etree.SubElement(payment_service_root, 'submit')
-    order = etree.SubElement(
-        submit, 'order', orderCode=str(paypal_payment_request['customer_order_code']),
-        shopperLanguageCode=str(paypal_payment_request['shopperCountryCode'])
-    )
-
-    description = etree.SubElement(order, 'description')
-    description.text = paypal_payment_request['order_description']
-
-    etree.SubElement(
-        order, 'amount', currencyCode=str(paypal_payment_request['currency_code']),
-        exponent='2', value=str(paypal_payment_request['amount'])
-    )
-
-    payment_details_element = etree.SubElement(order, 'paymentDetails')
-    paypal_express = etree.SubElement(payment_details_element, 'PAYPAL-EXPRESS')
-
-    success_url = etree.SubElement(paypal_express, 'successURL')
-    success_url.text = str(paypal_payment_request['success_url'])
-
-    failure_url = etree.SubElement(paypal_express, 'failureURL')
-    failure_url.text = str(paypal_payment_request['failure_url'])
-
-    cancel_url = etree.SubElement(paypal_express, 'cancelURL')
-    cancel_url.text = str(paypal_payment_request['cancellation_url'])
-
-    # Append DTD heading to request
-    xml_string = etree.tostring(
-        payment_service_root.getroottree(),
-        xml_declaration=True,
-        encoding='UTF-8',
-        doctype='<!DOCTYPE paymentService PUBLIC "-//Bibit//DTD Bibit PaymentService v1//EN" "http://dtd.bibit.com/paymentService_v1.dtd">'
     )
 
     return xml_string
